--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class=" col-md side-header-left hidden-sm-up">
                 <div class="row">
                     <div class="col-5">
-                        <img class='img-fluid' src="resources/header1.png">
+                        <img class='img-fluid' src="header1.png">
                     </div>
                     <div class="col">Infection isn’t really slowing in India</div>
                 </div>
@@ -63,7 +63,7 @@
             <div class="col-lg col-md side-header-right  hidden-sm-down">
                 <div class="row">
                     <div class="col-5 ">
-                        <img class="img-fluid" src="resources/header2.png">
+                        <img class="img-fluid" src="header2.png">
                     </div>
                     <div class="col">US Elections 2020 Updates</div>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1>PUNJAB GOVT. APPOINTS NODAL OFFICERS TO CURB STUBBLE BURNING</h1>
-                        <img class='img-fluid' src="resources/brian-mcgowan-vG7ZOT8iiNo-unsplash.jpg">
+                        <img class='img-fluid' src="brian-mcgowan-vG7ZOT8iiNo-unsplash.jpg">
                         <h4>Over 23,000 crop residue management machines are being given to farmers</h4><br>
                         <p>
                             Singh has appealed to farm-
@@ -146,7 +146,7 @@
                                     omnis ea.</h4>
                                 <div class="row my02">
                                     <div class="col">
-                                        <img class="img-fluid" src="resources/adam-niescioruk-j3uspx11Cog-unsplash.jpg"
+                                        <img class="img-fluid" src="adam-niescioruk-j3uspx11Cog-unsplash.jpg"
                                             class="m-auto">
                                     </div>
                                     <div class="col">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -160,7 +160,7 @@
                                 <h4>Lorem ipsum dolor sit amet consectetur. Quo quisquam magnam.</h4>
                                 <div class="row mt-2">
                                     <div class="col">
-                                        <img class="img-fluid" src="resources/zane-lee-YXnNkwd285w-unsplash.jpg">
+                                        <img class="img-fluid" src="zane-lee-YXnNkwd285w-unsplash.jpg">
                                     </div>
                                     <div class="col">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex
                                         blanditiis quisquam sint beatae! Commodi nihil aliquid officiis et explicabo eos
@@ -177,7 +177,7 @@
                                     linking her to drug case</h4>
                                 <div class="row mt-2">
                                     <div class="col">
-                                        <img class="img-fluid" src="resources/taylor-simpson-krY-4Yjqo8c-unsplash.jpg"
+                                        <img class="img-fluid" src="taylor-simpson-krY-4Yjqo8c-unsplash.jpg"
                                             class="m-auto">
                                     </div>
                                     <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
@@ -191,7 +191,7 @@
                                 <h4>Lorem ipsum dolor sit amet consectetur gnam.</h4>
                                 <div class="row mt-2">
                                     <div class="col">
-                                        <img class="img-fluid" src="resources/zane-lee--8MwYbUHvpQ-unsplash.jpg">
+                                        <img class="img-fluid" src="zane-lee--8MwYbUHvpQ-unsplash.jpg">
                                     </div>
                                     <div class="col">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente nemo
@@ -217,7 +217,7 @@
                             <div class="col-md-12">
                                 <div class="row pd-5 md-10">
                                     <div class="col-md-2">
-                                        <img src="resources/covid.png" class="img-fluid">
+                                        <img src="covid.png" class="img-fluid">
                                     </div>
                                     <div class="col-md">
                                         Testing tripled
@@ -242,7 +242,7 @@
             <div class="col-md-4">
                 <div>
                     <h5>Politics</h5>
-                    <img class="img-fluid" src="resources/zach-vessels-leUFTSlCEXk-unsplash.jpg">
+                    <img class="img-fluid" src="zach-vessels-leUFTSlCEXk-unsplash.jpg">
                     <h2>Lorem, ipsum dolorsectetur ciunt fugit neque.</h2>
                     <p>
                         Addressing the media
