--- a/page2.html
+++ b/page2.html
@@ -101,7 +101,7 @@
                             <div class="col"></div>
                         </div>
                         <div class="col">
-                            <img src="resources/zane-lee--8MwYbUHvpQ-unsplash.jpg" alt="boat"
+                            <img src="zane-lee--8MwYbUHvpQ-unsplash.jpg" alt="boat"
                                 class="img-fluid headerImage">
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         <div class=" col-sm-7 redHeader bg-danger">25 12 03</div>
                     </div>
                 </div>
-                <img src="resources/kerela.png" alt="" class="img-fluid" style="width:100%">
+                <img src="kerela.png" alt="" class="img-fluid" style="width:100%">
                 <h5 class="mt-2">
                     Call to Honour
                 </h5>
@@ -154,7 +154,7 @@
                         <div class="col-sm-7  redHeader bg-danger">25 12 03</div>
                     </div>
                 </div>
-                <img src="resources/boat.png" alt="" class="img-fluid" style="height: 210px; width: 100%;">
+                <img src="boat.png" alt="" class="img-fluid" style="height: 210px; width: 100%;">
                 <h5 class="mt-2">
                     Void in national life: Sonia
                 </h5>
@@ -185,7 +185,7 @@
                         <div class=" col-sm-7  redHeader bg-danger">25 12 03</div>
                     </div>
                 </div>
-                <img src="resources/zach-vessels-leUFTSlCEXk-unsplash.jpg" alt="" class="img-fluid" style="width:100%">
+                <img src="zach-vessels-leUFTSlCEXk-unsplash.jpg" alt="" class="img-fluid" style="width:100%">
                 <h5 class="mt-2">
                     Kargil leaders demand
                     pre­August
