--- a/page3.html
+++ b/page3.html
@@ -187,7 +187,7 @@
 
             </div>
             <div class="col-md-4">
-                <img class="img-fluid" src="resources/ivana-cajina-Hi0bdO0vEfo-unsplash.jpg" alt="tribes">
+                <img class="img-fluid" src="ivana-cajina-Hi0bdO0vEfo-unsplash.jpg" alt="tribes">
             </div>
         </div>
         <div class="row">
@@ -211,7 +211,7 @@
                         <div class="redHeader bg-danger">25 12 03</div>
                     </div>
                 </div>
-                <img src="resources/brian-mcgowan-vG7ZOT8iiNo-unsplash.jpg" alt="splash"
+                <img src="brian-mcgowan-vG7ZOT8iiNo-unsplash.jpg" alt="splash"
                     class="img-fluid imgSection2Page3">
             </div>
         </div>
@@ -255,7 +255,7 @@
                             </>
                         </div>
                         <div class="col-md-4">
-                            <img src="resources/rakulpreet.png" class="img-fluid" alt="">
+                            <img src="rakulpreet.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
