--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="row newspaperInfo">
             <hr class="hr" />
-            <div class="col-md-5 date">Monday&nbsp; September 28th 2020 &nbsp; Surat India</div>
+            <div class="col-md-5 date">Monday&nbsp; July 1st 2021 &nbsp; Surat India</div>
             <div class="col-md website "><u><a href="index.html">www.thesunNews.com</a></u></div>
             <div class="col-md totalPages">Volume 1 / Total Pages:3 / Page 1 of 3</div>
             <hr class="hr" />
